# Ultron

./: .gitignore  CHANGELOG.md  README.md  agent_ultron.py  main.py  pyproject.toml  run_ultron.bat  run_ultron.ps1  server.py
.agents/: AGENTS.md
config/: general.json  memory.json  operator_profile.json  skills.json  ui.json  voice.json
docs/: COGNITIVE_CORE.md  DECISIONS.md  VISION.md
documentation/: 01_PROJECT_OVERVIEW.md  02_SYSTEM_ARCHITECTURE.md  03_PROJECT_TIMELINE.md  04_COMPLETED_FEATURES.md  05_BUG_TRACKER.md  06_CURRENT_PROGRESS.md  07_FUTURE_ROADMAP.md  08_DATABASE_DOCUMENTATION.md  09_API_REFERENCE.md  10_DEBUG_GUIDE.md  11_DEPENDENCY_MAP.md  12_DEVELOPER_GUIDE.md
mcp/: README.md  __init__.py  config.json  mcp_client_config.json  server.py  service.py  start_mcp.bat  start_mcp.ps1
scratch/: convert_icon.py  diagnose_mic.py  diagnose_onboarding.py  diagnose_subsequent_boot.py  diagnose_ui.py  diagnose_v1_architecture.py  grammar.xml  inspect_sapi.py  inspect_sapi_events.py  inspect_shortcut.py  sapi_diagnostic.py  sapi_pure_msdn.py  sapi_xml_msdn.py  test_mic.py  test_shared_recognizer.py  verify_memory.py
scripts/: create_desktop_shortcut.py
tests/: test_alias_generator.py  test_app_indexer.py  test_cognitive_os.py  test_cognitive_os_integration.py  test_cognitive_os_phase2.py  test_dispatcher.py  test_entity_graph.py  test_first_awakening.py  test_forensics_pipeline.py  test_fuzzy_matcher.py  test_hidden_items.py  test_intent_engine.py  test_learning_memory.py  test_os_skills.py  test_phase4_resolver.py  test_resolver_pipeline.py
(+166 files in other folders)
