[project]
name = "ultron-agent-platform"
version = "0.1.0"
description = "Ultron — A modular cognitive agent platform for developers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx",
    "livekit-agents[deepgram,groq,openai,sarvam,silero]>=1.5.1",
    "livekit-plugins-google>=1.5.1",
    "python-dotenv",
]

[project.scripts]
ultron = "server:main"
ultron_voice = "agent_ultron:dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py", "agent_ultron.py"]


